# tailslide

./: CHANGELOG.md  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
tailslide/: __init__.py
tailslide/mongoengine/: __init__.py
tests/: conftest.py
tests/django/: conftest.py  test_median.py  test_percentile.py
tests/lists/: test_percentile.py
tests/mongoengine/: conftest.py  test_median.py  test_percentile.py
